cmake_minimum_required(VERSION 3.16.3)
set(CMAKE_CXX_STANDARD 17)

set(PROJECT_NAME common)
project(${PROJECT_NAME})

add_subdirectory(src)

#set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
#set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
#set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
